chore(example): toggle network on title click

--- a/examples/vite/src/App.module.css
+++ b/examples/vite/src/App.module.css
@@ -13,10 +13,14 @@
 }
 
 .title {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
   font-size: 2rem;
+  font-weight: bold;
 }
 
-.title[data-testnet] {
+.title[data-testnet="true"] {
   color: #f59e0b;
 }
 
