feat: render modal on portal div inside drawer

--- a/packages/widget-react/src/pages/bridge/SlippageControl.module.css
+++ b/packages/widget-react/src/pages/bridge/SlippageControl.module.css
@@ -20,6 +20,9 @@
 
   background-color: var(--gray-7);
   color: var(--dimmed);
+  font-family: var(--monospace);
+  font-size: 14px;
+  font-weight: 500;
 
   &:hover:not(.active) {
     background-color: var(--gray-6);
