--- a/packages/widget-react/src/components/form/QuantityInput.module.css
+++ b/packages/widget-react/src/components/form/QuantityInput.module.css
@@ -6,6 +6,7 @@
   background-color: transparent;
   border: 0;
   border-radius: 0;
+  font-family: var(--monospace);
   font-size: 38px;
   font-weight: 700;
   text-align: right;
