--- a/packages/widget-react/src/pages/bridge/OperationItem.module.css
+++ b/packages/widget-react/src/pages/bridge/OperationItem.module.css
@@ -83,6 +83,12 @@
   }
 }
 
+.lower {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .chain {
   color: var(--gray-2);
   font-size: 12px;
@@ -90,38 +96,16 @@
 }
 
 .address {
-  background-color: var(--gray-7);
-  border-radius: 12px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 2px;
+
   color: var(--gray-2);
   font-size: 11px;
   font-weight: 500;
-  height: 24px;
-  padding: 0 10px;
-  position: relative;
 
   &:hover {
-    background-color: var(--gray-6);
-  }
-
-  .original {
-    visibility: visible;
-    white-space: nowrap;
-  }
-
-  .hidden {
-    visibility: hidden;
-  }
-
-  .copied {
-    visibility: hidden;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    white-space: nowrap;
-  }
-
-  .visible {
-    visibility: visible;
+    color: var(--gray-1);
   }
 }
