--- a/examples/vite/src/Connection.module.css
+++ b/examples/vite/src/Connection.module.css
@@ -1,10 +1,19 @@
 .button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   border-radius: 4px;
   border: none;
   cursor: pointer;
   font-size: 1rem;
   padding: 0.5rem 1rem;
   transition: background-color 0.2s ease;
+  width: 140px;
+
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 [data-theme="dark"] .button {
