style(tx): style fee denom selector

--- a/packages/widget-react/src/pages/tx/TxFee.module.css
+++ b/packages/widget-react/src/pages/tx/TxFee.module.css
@@ -12,19 +12,29 @@
 }
 
 .content {
-  background-color: var(--bg);
-  border: 1px solid var(--border);
+  background-color: var(--gray-8);
+  border: 1px solid var(--gray-6);
+  border-radius: 8px;
+  padding: 4px;
   z-index: var(--z-index);
 }
 
 .item {
-  color: var(--gray-1);
+  border-radius: 4px;
+  color: var(--gray-2);
   cursor: pointer;
   font-family: var(--monospace);
   font-size: 12px;
   font-weight: 500;
+  text-align: right;
+  padding: 4px 12px;
+  width: 152px;
 
   &:hover {
-    color: white;
+    background-color: var(--gray-7);
+  }
+
+  &[data-state="checked"] {
+    color: var(--gray-1);
   }
 }
