--- a/packages/widget-react/src/pages/bridge/op/ClaimButton.module.css
+++ b/packages/widget-react/src/pages/bridge/op/ClaimButton.module.css
@@ -1,9 +1,9 @@
 .button {
-  border-radius: 20px;
+  border-radius: calc(infinity * 1px);
   border: 1px solid var(--gray-6);
   font-size: 12px;
   font-weight: 600;
-  height: 40px;
+  height: 38px;
   padding: 0 24px;
 
   &:hover {
