--- a/packages/widget-react/src/components/form/AssetOnChainButton.module.css
+++ b/packages/widget-react/src/components/form/AssetOnChainButton.module.css
@@ -37,6 +37,9 @@
 .symbol {
   font-size: 16px;
   font-weight: 600;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .chain {
