style: adjust multiple styles

--- a/packages/widget-react/src/pages/wallet/tabs/activity/ActivityChanges.module.css
+++ b/packages/widget-react/src/pages/wallet/tabs/activity/ActivityChanges.module.css
@@ -7,9 +7,9 @@
 }
 
 .positive {
-  color: var(--info);
+  color: var(--info-light);
 }
 
 .negative {
-  color: var(--error);
+  color: var(--error-light);
 }
