feat(bridge): link op withdraw entries to internal status page

--- a/packages/widget-react/src/pages/bridge/BridgeHistoryItem.module.css
+++ b/packages/widget-react/src/pages/bridge/BridgeHistoryItem.module.css
@@ -1,5 +1,9 @@
 .link {
-  display: grid;
+  width: 100%;
+
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   gap: 20px;
 
   color: inherit;
