--- a/packages/widget-react/src/pages/bridge/BridgeFields.module.css
+++ b/packages/widget-react/src/pages/bridge/BridgeFields.module.css
@@ -80,3 +80,9 @@
   cursor: pointer;
   text-decoration: underline;
 }
+
+.warning {
+  color: var(--gray-1);
+  font-size: 16px;
+  font-weight: 500;
+}
