style: reset light mode color scheme

--- a/packages/widget-react/src/styles/global.css
+++ b/packages/widget-react/src/styles/global.css
@@ -13,43 +13,51 @@
 
   --success-light: #77f893;
   --success: #55f678;
+  --success-dark: #2b7b3c;
   --success-bg: #172a1b;
   --error-light: #f97676;
   --error: #f85454;
+  --error-dark: #7c2a2a;
   --error-bg: #2a1515;
   --warning-light: #f9cf72;
   --warning: #f8c24f;
+  --warning-dark: #7c6128;
   --warning-bg: #2b2416;
   --info-light: #74e3fc;
   --info: #51dcfb;
+  --info-dark: #296e7e;
   --info-bg: #122327;
 }
 
 :root[data-theme="light"],
 :host([data-theme="light"]) {
-  --gray-0: #101010;
-  --gray-1: #1b1c1d;
-  --gray-2: #242629;
-  --gray-3: #2f3337;
-  --gray-4: #383d42;
-  --gray-5: #585f67;
-  --gray-6: #757c82;
-  --gray-7: #a1a6aa;
-  --gray-8: #d1d9e0;
+  --gray-0: #0a0a0a;
+  --gray-1: #242628;
+  --gray-2: #56595c;
+  --gray-3: #797d81;
+  --gray-4: #989b9e;
+  --gray-5: #bec2c6;
+  --gray-6: #c8ccd0;
+  --gray-7: #dbdee1;
+  --gray-8: #e3e6e9;
   --gray-9: #f5f5f5;
 
-  --success-light: --success;
-  --success: #172a1b;
-  --success-bg: #55f678;
-  --error-light: --error;
-  --error: #2a1515;
-  --error-bg: #f85454;
-  --warning-light: --warning;
-  --warning: #2b2416;
-  --warning-bg: #f8c24f;
-  --info-light: --info;
-  --info: #122327;
-  --info-bg: #51dcfb;
+  --success-light: #00832a;
+  --success: #109435;
+  --success-dark: #afdebc;
+  --success-bg: #d4f6dd;
+  --error-light: #b50a1c;
+  --error: #d1242f;
+  --error-dark: #f6c3c4;
+  --error-bg: #ffebe9;
+  --warning-light: #c66f00;
+  --warning: #d18800;
+  --warning-dark: #eed888;
+  --warning-bg: #fff7db;
+  --info-light: #006bc6;
+  --info: #037cd8;
+  --info-dark: #a6d8ff;
+  --info-bg: #ddf4ff;
 }
 
 :root,
