style: update form message border color

--- a/packages/widget-react/src/components/form/FormHelp.module.css
+++ b/packages/widget-react/src/components/form/FormHelp.module.css
@@ -13,20 +13,20 @@
 
 .info {
   background-color: var(--info-bg);
-  border-color: var(--info);
+  border-color: var(--info-dark);
 }
 
 .warning {
   background-color: var(--warning-bg);
-  border-color: var(--warning);
+  border-color: var(--warning-dark);
 }
 
 .error {
   background-color: var(--error-bg);
-  border-color: var(--error);
+  border-color: var(--error-dark);
 }
 
 .success {
   background-color: var(--success-bg);
-  border-color: var(--success);
+  border-color: var(--success-dark);
 }
