--- a/packages/widget-react/src/components/Modal.module.css
+++ b/packages/widget-react/src/components/Modal.module.css
@@ -41,11 +41,11 @@
 }
 
 .content[data-state="open"] {
-  animation: slideIn 150ms ease-out;
+  animation: slideIn var(--transition) ease-out;
 }
 
 .content[data-state="closed"] {
-  animation: slideOut 150ms ease-in;
+  animation: slideOut var(--transition) ease-in;
 }
 
 @keyframes slideIn {
