--- a/packages/widget-react/src/components/WidgetAccordion.module.css
+++ b/packages/widget-react/src/components/WidgetAccordion.module.css
@@ -27,7 +27,6 @@
   font-size: 13px;
   font-weight: 500;
   padding: var(--accordion-padding);
-  transition: border-radius 150ms ease-in-out;
   width: 100%;
 
   &:hover {
@@ -45,10 +44,10 @@
 
   will-change: height;
   &[data-state="open"] {
-    animation: slideDown 150ms cubic-bezier(0.87, 0, 0.13, 1);
+    animation: slideDown var(--transition) cubic-bezier(0.87, 0, 0.13, 1);
   }
   &[data-state="closed"] {
-    animation: slideUp 150ms cubic-bezier(0.87, 0, 0.13, 1);
+    animation: slideUp var(--transition) cubic-bezier(0.87, 0, 0.13, 1);
   }
 }
 
