--- a/packages/widget-react/src/components/WidgetAccordion.module.css
+++ b/packages/widget-react/src/components/WidgetAccordion.module.css
@@ -29,6 +29,8 @@
   padding: var(--accordion-padding);
   width: 100%;
 
+  transition: background-color var(--transition) ease;
+
   &:hover {
     background-color: var(--gray-6);
   }
