--- a/packages/widget-react/src/pages/bridge/op/ClaimButton.module.css
+++ b/packages/widget-react/src/pages/bridge/op/ClaimButton.module.css
@@ -6,6 +6,8 @@
   height: 38px;
   padding: 0 24px;
 
+  transition: border-color var(--transition) ease;
+
   &:hover {
     border-color: var(--gray-0);
   }
