--- a/packages/widget-react/src/styles/global.css
+++ b/packages/widget-react/src/styles/global.css
@@ -85,6 +85,8 @@
 :where(a) {
   color: var(--info);
 
+  transition: color var(--transition) ease;
+
   &:hover {
     color: var(--info-light);
   }
@@ -109,6 +111,8 @@
   &::placeholder {
     color: var(--gray-4);
   }
+
+  transition: border-color var(--transition) ease;
 
   &:hover {
     border-color: var(--gray-4);
