--- a/packages/widget-react/src/components/PlainModalContent.module.css
+++ b/packages/widget-react/src/components/PlainModalContent.module.css
@@ -39,6 +39,8 @@
   font-size: 14px;
   font-weight: 500;
 
+  transition: color var(--transition) ease;
+
   &:hover {
     color: var(--gray-0);
   }
