--- a/packages/widget-react/src/components/form/ChainOptions.module.css
+++ b/packages/widget-react/src/components/form/ChainOptions.module.css
@@ -29,6 +29,8 @@
   justify-content: center;
   align-items: center;
 
+  transition: background-color var(--transition) ease;
+
   &:hover {
     background-color: var(--gray-6);
   }
