--- a/packages/widget-react/src/pages/bridge/OperationItem.module.css
+++ b/packages/widget-react/src/pages/bridge/OperationItem.module.css
@@ -36,6 +36,8 @@
     width: 24px;
     height: 24px;
     z-index: 1;
+
+    transition: color var(--transition) ease;
   }
 
   button.type:hover {
@@ -77,6 +79,8 @@
   color: var(--gray-2);
   font-size: 11px;
   font-weight: 500;
+
+  transition: color var(--transition) ease;
 
   &:hover {
     color: var(--gray-1);
