--- a/packages/widget-react/src/pages/bridge/op/WithdrawalList.module.css
+++ b/packages/widget-react/src/pages/bridge/op/WithdrawalList.module.css
@@ -14,6 +14,8 @@
   font-size: 12px;
   padding: 14px;
 
+  transition: color var(--transition) ease;
+
   &:hover {
     color: var(--gray-0);
   }
