--- a/packages/widget-react/src/pages/wallet/components/ChainAccordion.module.css
+++ b/packages/widget-react/src/pages/wallet/components/ChainAccordion.module.css
@@ -13,6 +13,8 @@
   font-weight: 500;
   padding: 12px 20px;
 
+  transition: background-color var(--transition) ease;
+
   &:hover {
     background-color: var(--gray-8);
   }
