--- a/packages/widget-react/src/pages/wallet/tabs/assets/AssetActions.module.css
+++ b/packages/widget-react/src/pages/wallet/tabs/assets/AssetActions.module.css
@@ -15,8 +15,10 @@
   font-weight: 600;
   padding: 0 12px;
 
+  transition: background-color var(--transition) ease;
+
   &:hover {
-    background: var(--gray-5);
+    background-color: var(--gray-5);
   }
 }
 
