--- a/packages/widget-react/src/pages/wallet/tabs/assets/AssetList.module.css
+++ b/packages/widget-react/src/pages/wallet/tabs/assets/AssetList.module.css
@@ -9,6 +9,8 @@
   background-color: var(--gray-8);
   overflow: hidden;
 
+  transition: background-color var(--transition) ease;
+
   &:hover {
     background-color: var(--gray-7);
   }
