--- a/packages/widget-react/src/pages/wallet/tabs/nft/CollectionItem.module.css
+++ b/packages/widget-react/src/pages/wallet/tabs/nft/CollectionItem.module.css
@@ -5,6 +5,7 @@
   padding: 8px 16px;
 
   background-color: var(--gray-8);
+  transition: background-color var(--transition) ease;
 
   &:hover {
     background-color: var(--gray-6);
