--- a/packages/widget-react/src/pages/bridge/BridgeAccount.module.css
+++ b/packages/widget-react/src/pages/bridge/BridgeAccount.module.css
@@ -29,3 +29,14 @@
   margin-top: 0;
   margin-bottom: 20px;
 }
+
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 6px;
+
+  .warningIcon {
+    color: var(--warning);
+  }
+}
