--- a/packages/widget-react/src/components/Button.module.css
+++ b/packages/widget-react/src/components/Button.module.css
@@ -57,12 +57,16 @@
     fill: var(--gray-1);
   }
 
-  &:hover:not(:disabled) {
+  &:hover:not(:disabled):not(.span) {
     border-color: var(--gray-4);
   }
 
   &:disabled {
     color: var(--gray-4);
+  }
+
+  &.span {
+    cursor: default;
   }
 
   &.unpadded {
