feat(bridge): update recipient address ux with warning

--- a/packages/widget-react/src/components/Button.module.css
+++ b/packages/widget-react/src/components/Button.module.css
@@ -61,12 +61,16 @@
 
   transition: border-color var(--transition) ease;
 
-  &:hover:not(:disabled) {
+  &:hover:not(:disabled):not(.span) {
     border-color: var(--gray-4);
   }
 
   &:disabled {
     color: var(--gray-4);
+  }
+
+  &.span {
+    cursor: default;
   }
 
   &.unpadded {
