--- a/packages/widget-react/src/pages/bridge/BridgeAccount.module.css
+++ b/packages/widget-react/src/pages/bridge/BridgeAccount.module.css
@@ -1,3 +1,10 @@
+.wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 6px;
+}
+
 .account {
   display: flex;
   align-items: center;
