--- a/packages/widget-react/src/styles/global.css
+++ b/packages/widget-react/src/styles/global.css
@@ -95,7 +95,7 @@
 :where(label, .label) {
   font-size: 12px;
   font-weight: 500;
-  margin-bottom: 4px;
+  margin-bottom: 6px;
 }
 
 :where(input, .input) {
@@ -124,4 +124,20 @@
     border-color: var(--gray-1);
     outline: none;
   }
+}
+
+:where(.success) {
+  color: var(--success);
+}
+
+:where(.error) {
+  color: var(--error);
+}
+
+:where(.warning) {
+  color: var(--warning);
+}
+
+:where(.info) {
+  color: var(--info);
 }
