--- a/packages/widget-react/src/components/WidgetTooltip.module.css
+++ b/packages/widget-react/src/components/WidgetTooltip.module.css
@@ -10,6 +10,32 @@
   z-index: var(--z-index);
 }
 
+.tooltip[data-state="open"] {
+  animation: fadeIn var(--transition) ease-out;
+}
+
+.tooltip[data-state="closed"] {
+  animation: fadeOut var(--transition) ease-out;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
 .arrow {
   fill: var(--gray-5);
 }
