--- a/packages/widget-react/src/pages/connect/Connect.module.css
+++ b/packages/widget-react/src/pages/connect/Connect.module.css
@@ -1,13 +1,28 @@
-.list {
-  display: grid;
-  gap: 4px;
+.title {
+  padding: 24px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid var(--gray-7);
+
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.scrollable {
+  padding: 0;
+
+  .list {
+    display: grid;
+  }
 }
 
 .connector {
   gap: 12px;
 
-  border-radius: 12px;
-  padding: 10px;
+  padding: 12px var(--padding);
+  border-bottom: 1px solid var(--gray-7);
+
+  flex: 1;
+  overflow-y: auto;
 
   .name {
     flex: 1;
