--- a/packages/widget-react/src/components/form/RecipientInput.module.css
+++ b/packages/widget-react/src/components/form/RecipientInput.module.css
@@ -4,23 +4,34 @@
   align-items: center;
 }
 
-.my {
+.paste {
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 4px;
-
-  padding-left: 8px;
 
   .icon {
     color: var(--gray-6);
   }
 }
 
-.active {
-  border-color: var(--gray-0);
+.myAddress {
+  color: var(--gray-1);
+}
 
-  .icon {
-    color: var(--gray-0);
+.input {
+  position: relative;
+  .reset {
+    position: absolute;
+    padding: 10px;
+    right: 6px;
+    top: 50%;
+    transform: translateY(-50%);
+    color: var(--gray-3);
+    background-color: var(--gray-7);
+
+    &:hover {
+      color: var(--gray-1);
+    }
   }
 }
