--- a/packages/widget-react/src/pages/bridge/BridgeAccount.module.css
+++ b/packages/widget-react/src/pages/bridge/BridgeAccount.module.css
@@ -24,6 +24,14 @@
     background-color: var(--gray-6);
   }
 
+  .reset:hover {
+    color: var(--gray-1);
+
+    /* incerase button hitbox */
+    padding: 4px;
+    margin: -4px;
+  }
+
   &.white {
     background-color: var(--gray-0);
     color: var(--gray-8);
