style: design connect wallet

--- a/packages/widget-react/src/components/List.module.css
+++ b/packages/widget-react/src/components/List.module.css
@@ -7,8 +7,12 @@
 }
 
 .item {
-  justify-content: flex-start;
+  flex: 1;
   gap: 8px;
+
+  .name {
+    flex: 1;
+  }
 
   border-bottom: 1px solid var(--border);
   padding: 12px var(--padding);
@@ -17,5 +21,9 @@
 
   &:hover {
     background-color: var(--gray-8);
+  }
+
+  &:disabled {
+    cursor: not-allowed;
   }
 }
