--- a/packages/widget-react/src/pages/bridge/BridgeAccount.module.css
+++ b/packages/widget-react/src/pages/bridge/BridgeAccount.module.css
@@ -24,6 +24,17 @@
     background-color: var(--gray-6);
   }
 
+  .clear {
+    padding: 12px;
+    margin: -12px;
+
+    transition: color var(--transition) ease;
+  }
+
+  .clear:hover {
+    color: var(--gray-1);
+  }
+
   &.white {
     background-color: var(--gray-0);
     color: var(--gray-8);
