Use mono font for addresses

--- a/packages/widget-react/src/components/form/RecipientInput.module.css
+++ b/packages/widget-react/src/components/form/RecipientInput.module.css
@@ -7,6 +7,10 @@
 .wrapper {
   position: relative;
 
+  input {
+    padding-right: 42px;
+  }
+
   .clear {
     position: absolute;
     right: 6px;
