--- a/packages/widget-react/src/components/form/RecipientInput.module.css
+++ b/packages/widget-react/src/components/form/RecipientInput.module.css
@@ -7,8 +7,8 @@
 .wrapper {
   position: relative;
 
-  input {
-    padding-right: 42px;
+  .input {
+    padding-right: calc(6px + 2 * 10px + 16px);
   }
 
   .clear {
