style: update address font to Roboto Mono
Co-authored-by: sim <sim@cheolhwan.com>

--- a/packages/widget-react/src/components/form/RecipientInput.module.css
+++ b/packages/widget-react/src/components/form/RecipientInput.module.css
@@ -7,6 +7,10 @@
 .wrapper {
   position: relative;
 
+  .input {
+    padding-right: calc(6px + 2 * 10px + 16px);
+  }
+
   .clear {
     position: absolute;
     right: 6px;
