--- a/packages/widget-react/src/pages/bridge/BridgeHistoryItem.module.css
+++ b/packages/widget-react/src/pages/bridge/BridgeHistoryItem.module.css
@@ -20,8 +20,10 @@
 }
 
 .header {
-  display: grid;
-  gap: 8px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 
   .title {
     display: flex;
@@ -37,23 +39,23 @@
     color: var(--error);
   }
 
-  .badge {
-    background-color: var(--gray-6);
-    border-radius: 4px;
-    color: var(--gray-0);
-    font-size: 11px;
-    font-weight: 600;
-    padding: 2px 8px;
-  }
-
   .meta {
     display: flex;
     align-items: center;
-    gap: 12px;
+    gap: 8px;
 
     color: var(--gray-2);
     font-size: 12px;
     font-weight: 500;
+  }
+
+  .explorer {
+    color: var(--gray-3);
+    font-size: 12px;
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+    gap: 2px;
   }
 
   .item {
@@ -82,7 +84,19 @@
 .row {
   display: flex;
   align-items: center;
-  gap: 8px;
+  gap: 12px;
+
+  .logoContainer {
+    position: relative;
+
+    .chainLogo {
+      position: absolute;
+      bottom: 0;
+      right: -4px;
+      border: 1px solid var(--gray-7);
+      border-radius: 50%;
+    }
+  }
 }
 
 .asset {
