Add wallet icon to bridge history

--- a/packages/widget-react/src/pages/bridge/BridgeHistoryItem.module.css
+++ b/packages/widget-react/src/pages/bridge/BridgeHistoryItem.module.css
@@ -116,6 +116,13 @@
   color: var(--gray-2);
   font-size: 12px;
   font-weight: 500;
+  display: flex;
+  align-items: center;
+  gap: 4px;
+
+  .walletIcon {
+    margin-left: 4px;
+  }
 }
 
 .arrow {
