--- a/packages/widget-react/src/pages/bridge/SlippageControl.module.css
+++ b/packages/widget-react/src/pages/bridge/SlippageControl.module.css
@@ -7,16 +7,15 @@
 
 .presets {
   display: flex;
-  gap: 8px;
+  gap: 6px;
   margin-bottom: 16px;
 }
 
 .preset {
-  flex: 1;
-
   border: 1px solid transparent;
   border-radius: 24px;
   height: 48px;
+  padding-inline: 20px;
 
   background-color: var(--gray-7);
   color: var(--dimmed);
@@ -37,7 +36,11 @@
   }
 }
 
-.input {
+.custom {
+  width: 100%;
+}
+
+.customContainer {
   position: relative;
 
   .percent {
