--- a/packages/widget-react/src/pages/bridge/SlippageControl.module.css
+++ b/packages/widget-react/src/pages/bridge/SlippageControl.module.css
@@ -15,13 +15,14 @@
   border: 1px solid transparent;
   border-radius: 24px;
   height: 48px;
-  padding-inline: 20px;
+  padding: 0 16px;
 
   background-color: var(--gray-7);
   color: var(--dimmed);
   font-family: var(--monospace);
   font-size: 14px;
   font-weight: 500;
+  text-align: center;
 
   transition: all var(--transition) ease;
 
@@ -37,10 +38,12 @@
 }
 
 .custom {
-  width: 100%;
+  flex: 1;
+  font-family: var(--font-family);
+  font-weight: 600;
 }
 
-.customContainer {
+.wrapper {
   position: relative;
 
   .percent {
@@ -48,5 +51,7 @@
     right: 16px;
     top: 50%;
     transform: translateY(-50%);
+
+    font-family: var(--monospace);
   }
 }
