--- a/packages/widget-react/src/pages/bridge/SlippageControl.module.css
+++ b/packages/widget-react/src/pages/bridge/SlippageControl.module.css
@@ -7,22 +7,22 @@
 
 .presets {
   display: flex;
-  gap: 8px;
+  gap: 6px;
   margin-bottom: 16px;
 }
 
 .preset {
-  flex: 1;
-
   border: 1px solid transparent;
   border-radius: 24px;
   height: 48px;
+  padding: 0 16px;
 
   background-color: var(--gray-7);
   color: var(--dimmed);
   font-family: var(--monospace);
   font-size: 14px;
   font-weight: 500;
+  text-align: center;
 
   transition: all var(--transition) ease;
 
@@ -37,7 +37,13 @@
   }
 }
 
-.input {
+.custom {
+  flex: 1;
+  font-family: var(--font-family);
+  font-weight: 600;
+}
+
+.wrapper {
   position: relative;
 
   .percent {
@@ -45,5 +51,7 @@
     right: 16px;
     top: 50%;
     transform: translateY(-50%);
+
+    font-family: var(--monospace);
   }
 }
