style: adjust multiple styles

--- a/packages/widget-react/src/pages/bridge/BridgeAccount.module.css
+++ b/packages/widget-react/src/pages/bridge/BridgeAccount.module.css
@@ -36,8 +36,10 @@
   }
 
   &.white {
+    gap: 4px;
     background-color: var(--gray-0);
     color: var(--gray-8);
+    font-weight: 600;
   }
 
   &.white:hover {
