--- a/packages/widget-react/src/pages/wallet/tabs/activity/SelectChain.module.css
+++ b/packages/widget-react/src/pages/wallet/tabs/activity/SelectChain.module.css
@@ -1,8 +1,14 @@
 .button {
   display: flex;
   justify-content: space-between;
+  gap: 6px;
+
   font-size: 14px;
   height: 44px;
+
+  .name {
+    flex: 1;
+  }
 
   .icon {
     color: var(--dimmed);
