--- a/packages/widget-react/src/pages/wallet/components/ChainAccordion.module.css
+++ b/packages/widget-react/src/pages/wallet/components/ChainAccordion.module.css
@@ -1,3 +1,9 @@
+.toggle {
+  justify-content: space-between;
+  width: 108px; /* magic number to fit the toggle and text */
+  white-space: nowrap;
+}
+
 .name {
   flex: 1;
 }
@@ -7,11 +13,11 @@
   justify-content: flex-start;
 
   border: 1px dashed var(--gray-4);
-  border-radius: 12px;
+  border-radius: 8px;
   color: var(--dimmed);
   font-size: 12px;
   font-weight: 500;
-  padding: 12px 20px;
+  padding: 12px 16px;
 
   transition: background-color var(--transition) ease;
 
