--- a/packages/widget-react/src/pages/bridge/BridgeFields.module.css
+++ b/packages/widget-react/src/pages/bridge/BridgeFields.module.css
@@ -50,7 +50,7 @@
   .row {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
   }
 
   .title {
