--- a/packages/widget-react/src/pages/bridge/BridgeFields.module.css
+++ b/packages/widget-react/src/pages/bridge/BridgeFields.module.css
@@ -50,7 +50,6 @@
   .row {
     display: flex;
     justify-content: space-between;
-    align-items: center;
   }
 
   .title {
@@ -63,6 +62,10 @@
     gap: 4px;
 
     font-family: var(--monospace);
+
+    .icon {
+      color: var(--gray-2);
+    }
   }
 
   .edit {
