style(component): set recipient input font monospace except placeholder

--- a/packages/widget-react/src/components/form/RecipientInput.module.css
+++ b/packages/widget-react/src/components/form/RecipientInput.module.css
@@ -11,6 +11,10 @@
     padding-right: calc(6px + 2 * 10px + 16px);
   }
 
+  .input::placeholder {
+    font-family: var(--font-family);
+  }
+
   .clear {
     position: absolute;
     right: 6px;
