--- a/packages/widget-react/src/pages/bridge/OperationItem.module.css
+++ b/packages/widget-react/src/pages/bridge/OperationItem.module.css
@@ -29,19 +29,22 @@
     justify-content: center;
     align-items: center;
 
-    background-color: var(--border);
+    background-color: var(--gray-8);
     border-radius: 4px;
     color: var(--dimmed);
-    cursor: default;
     width: 24px;
     height: 24px;
     z-index: 1;
 
     transition: color var(--transition) ease;
+
+    &:hover {
+      color: var(--gray-1);
+    }
   }
 
-  button.type:hover {
-    color: var(--gray-1);
+  button.type {
+    background-color: var(--border);
   }
 }
 
