--- a/packages/widget-react/src/public/app/Drawer.module.css
+++ b/packages/widget-react/src/public/app/Drawer.module.css
@@ -33,6 +33,7 @@
     background-color: rgba(0, 0, 0, 0.8);
     border-radius: 0;
     width: 100%;
+    height: 100vh; /* fallback for older browsers */
     height: 100dvh;
 
     svg {
@@ -62,6 +63,7 @@
     right: 0;
     bottom: 0;
     width: 100%;
+    height: calc(100vh - 54px); /* fallback for older browsers */
     height: calc(100dvh - 54px);
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
