--- a/packages/widget-react/src/public/app/Drawer.module.css
+++ b/packages/widget-react/src/public/app/Drawer.module.css
@@ -33,7 +33,8 @@
     background-color: rgba(0, 0, 0, 0.8);
     border-radius: 0;
     width: 100%;
-    height: 100vh;
+    height: 100vh; /* fallback */
+    height: 100dvh;
 
     svg {
       transform: rotate(90deg);
@@ -62,7 +63,8 @@
     right: 0;
     bottom: 0;
     width: 100%;
-    height: calc(100vh - 54px);
+    height: calc(100vh - 54px); /* fallback */
+    height: calc(100dvh - 54px);
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
   }
