--- a/packages/widget-react/src/pages/connect/Connect.module.css
+++ b/packages/widget-react/src/pages/connect/Connect.module.css
@@ -1,7 +1,45 @@
-.title {
-  border-bottom: 1px solid var(--border);
-  font-size: 20px;
-  font-weight: 600;
-  padding: 24px;
-  padding-bottom: 20px;
+.container {
+  height: 100%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  .title {
+    border-bottom: 1px solid var(--border);
+    font-size: 20px;
+    font-weight: 600;
+    padding: 24px;
+    padding-bottom: 20px;
+  }
+
+  .recent {
+    color: var(--info);
+    background-color: var(--info-bg);
+
+    padding: 1px 9px;
+    border-radius: 4px;
+
+    font-size: 11px;
+    line-height: 150%;
+  }
+
+  .footer {
+    padding: 24px;
+    a {
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+      gap: 6px;
+
+      text-decoration: none;
+      color: var(--gray-3);
+      font-size: 14px;
+      font-weight: 600;
+
+      &:hover {
+        color: var(--gray-1);
+      }
+    }
+  }
 }
