Update overlay hover color

--- a/packages/widget-react/src/public/app/Drawer.module.css
+++ b/packages/widget-react/src/public/app/Drawer.module.css
@@ -21,7 +21,7 @@
   transition: background-color var(--transition) ease-in-out;
 
   &:hover {
-    background-color: rgba(255, 255, 255, 0.05);
+    background-color: #7d7d7d1a;
   }
 
   @media (max-width: 576px) {
