Refactor indicator component

--- a/packages/widget-react/src/components/IndicatorBadge.module.css
+++ b/packages/widget-react/src/components/IndicatorBadge.module.css
@@ -1,10 +1,8 @@
-.link {
+.container {
   position: relative;
 
   .badge {
     position: absolute;
-    top: -1px;
-    right: -1px;
 
     background-color: var(--error);
     border-radius: 4px;
