--- a/packages/widget-react/src/components/form/ChainOptions.module.css
+++ b/packages/widget-react/src/components/form/ChainOptions.module.css
@@ -19,36 +19,29 @@
 }
 
 .item {
-  position: relative;
   aspect-ratio: 1 / 1;
 
-  background-color: var(--gray-7);
-  border: 1px solid transparent;
-  border-radius: 6px;
+  .button {
+    width: 100%;
+    height: 100%;
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    background-color: var(--gray-7);
+    border: 1px solid transparent;
+    border-radius: 6px;
 
-  transition: background-color var(--transition) ease;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-  &:hover {
-    background-color: var(--gray-6);
-  }
+    transition: background-color var(--transition) ease;
 
-  &.active {
-    background-color: var(--gray-6);
-    border-color: var(--gray-3);
-  }
+    &:hover {
+      background-color: var(--gray-6);
+    }
 
-  .badge {
-    position: absolute;
-    top: -3px;
-    right: -3px;
-
-    background-color: var(--error);
-    border-radius: 4px;
-    width: 8px;
-    height: 8px;
+    &.active {
+      background-color: var(--gray-6);
+      border-color: var(--gray-3);
+    }
   }
 }
