--- a/packages/widget-react/src/pages/bridge/BridgeHistoryItem.module.css
+++ b/packages/widget-react/src/pages/bridge/BridgeHistoryItem.module.css
@@ -3,7 +3,6 @@
 
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
   gap: 20px;
 
   color: inherit;
@@ -20,10 +19,12 @@
 }
 
 .header {
-  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
+
+  font-size: 12px;
+  font-weight: 500;
 
   .title {
     display: flex;
@@ -39,40 +40,40 @@
     color: var(--error);
   }
 
-  .meta {
-    display: flex;
-    align-items: center;
-    gap: 8px;
-
+  .date {
     color: var(--gray-2);
-    font-size: 12px;
-    font-weight: 500;
   }
 
   .explorer {
-    color: var(--gray-3);
-    font-size: 12px;
-    font-weight: 500;
     display: flex;
     align-items: center;
     gap: 2px;
-  }
 
-  .item {
-    display: flex;
-    align-items: center;
-    gap: 4px;
-
-    :last-of-type {
-      color: var(--gray-1);
-      font-family: var(--monospace);
-    }
+    color: var(--gray-3);
   }
 
   .divider {
     background-color: var(--gray-5);
     width: 1px;
     height: 8px;
+  }
+}
+
+.fees {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+
+  font-size: 12px;
+  font-weight: 500;
+
+  .label {
+    color: var(--gray-2);
+  }
+
+  .content {
+    color: var(--gray-1);
+    font-family: var(--monospace);
   }
 }
 
@@ -85,18 +86,6 @@
   display: flex;
   align-items: center;
   gap: 12px;
-
-  .logoContainer {
-    position: relative;
-
-    .chainLogo {
-      position: absolute;
-      bottom: 0;
-      right: -4px;
-      border: 1px solid var(--gray-7);
-      border-radius: 50%;
-    }
-  }
 }
 
 .asset {
@@ -113,15 +102,18 @@
 }
 
 .chain {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+
   color: var(--gray-2);
   font-size: 12px;
   font-weight: 500;
-  display: flex;
-  align-items: center;
-  gap: 4px;
 
-  .walletIcon {
-    margin-left: 4px;
+  .account {
+    display: flex;
+    align-items: center;
+    gap: 4px;
   }
 }
 
