--- a/packages/widget-react/src/pages/bridge/OperationItem.module.css
+++ b/packages/widget-react/src/pages/bridge/OperationItem.module.css
@@ -12,16 +12,15 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 4px;
 
-  position: relative;
   margin: 12px 0;
 
   .divider {
-    position: absolute;
-    top: 50%;
-    left: 0;
-    right: 0;
+    flex: 1;
+
     border-top: 1px solid var(--border);
+    height: 1px;
   }
 
   .type {
@@ -29,19 +28,16 @@
     justify-content: center;
     align-items: center;
 
-    background-color: var(--border);
     border-radius: 4px;
     color: var(--dimmed);
     cursor: default;
     width: 24px;
     height: 24px;
     z-index: 1;
-
-    transition: color var(--transition) ease;
   }
 
-  button.type:hover {
-    color: var(--gray-1);
+  button.type {
+    background-color: var(--border);
   }
 }
 
