--- a/packages/widget-react/src/pages/bridge/BridgePreviewRoute.module.css
+++ b/packages/widget-react/src/pages/bridge/BridgePreviewRoute.module.css
@@ -13,12 +13,19 @@
   font-size: 12px;
   font-weight: 600;
   padding: 0 12px;
-  width: 114px; /* magic number to fit the icon and text */
+  margin-left: auto;
+  width: fit-content;
 
   transition: background-color var(--transition) ease;
 
   &:hover {
     background-color: var(--gray-5);
+  }
+
+  span {
+    white-space: nowrap;
+    width: 82px;
+    text-align: center;
   }
 }
 
