feat(op): add indicator badge to chain selector for claimable assets

--- a/packages/widget-react/src/components/form/ChainOptions.module.css
+++ b/packages/widget-react/src/components/form/ChainOptions.module.css
@@ -20,6 +20,11 @@
 
 .item {
   aspect-ratio: 1 / 1;
+}
+
+.button {
+  width: 100%;
+  height: 100%;
 
   background-color: var(--gray-7);
   border: 1px solid transparent;
