--- a/packages/widget-react/src/pages/connect/Connect.module.css
+++ b/packages/widget-react/src/pages/connect/Connect.module.css
@@ -1,27 +1,16 @@
-.title {
-  border-bottom: 1px solid var(--border);
-  font-size: 20px;
-  font-weight: 600;
-  padding: 24px;
-  padding-bottom: 20px;
-}
-
-.empty {
+.page {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
 
   padding: 56px 60px;
-
-  .icon {
-    color: var(--warning);
-    margin-bottom: 8px;
-  }
+  height: 100%;
 
   h1 {
     font-size: 20px;
     font-weight: 600;
-    margin-bottom: 4px;
+    margin-bottom: 24px;
   }
 
   p {
@@ -36,31 +25,74 @@
     display: grid;
     gap: 10px;
     width: 100%;
+    overflow-y: scroll;
+
+    .item {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+
+      border: 1px solid var(--border);
+      border-radius: 12px;
+      color: var(--gray-2);
+      font-size: 14px;
+      font-weight: 600;
+      padding: 12px 16px;
+      text-decoration: none;
+
+      transition: background-color var(--transition) ease;
+
+      &:hover {
+        background-color: var(--gray-8);
+      }
+
+      .name {
+        flex: 1;
+        font-size: 14px;
+        font-weight: 600;
+      }
+
+      .extra,
+      .recent {
+        font-size: 11px;
+        font-weight: 600;
+      }
+
+      .recent {
+        padding: 1px 9px;
+        border-radius: 4px;
+        color: var(--info);
+        background-color: var(--info-bg);
+      }
+    }
+
+    .installed {
+      .name {
+        color: var(--gray-0);
+      }
+    }
   }
 
-  .item {
-    display: flex;
-    align-items: center;
-    gap: 8px;
+  .footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    margin: 20px auto;
 
-    border: 1px solid var(--border);
-    border-radius: 12px;
-    color: var(--gray-2);
-    font-size: 14px;
-    font-weight: 600;
-    padding: 12px 16px;
-    text-decoration: none;
+    a {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 6px;
+      font-size: 14px;
+      font-weight: 600;
+      text-decoration: none;
+      color: var(--gray-3);
 
-    transition: background-color var(--transition) ease;
-  }
-
-  .item:hover {
-    background-color: var(--gray-8);
-  }
-
-  .name {
-    flex: 1;
-    font-size: 14px;
-    font-weight: 600;
+      &:hover {
+        color: var(--gray-0);
+      }
+    }
   }
 }
