--- a/packages/widget-react/src/pages/connect/Connect.module.css
+++ b/packages/widget-react/src/pages/connect/Connect.module.css
@@ -1,98 +1,97 @@
 .page {
-  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
 
-  padding: 56px 60px;
+  padding: 20px 0;
   height: 100%;
+}
 
-  h1 {
-    font-size: 20px;
+.title {
+  font-size: 20px;
+  font-weight: 600;
+  margin-top: 36px;
+  margin-bottom: 24px;
+}
+
+.scrollable {
+  padding: 0 var(--padding);
+  width: 100%;
+}
+
+.list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+
+  margin: 0 auto;
+  width: 100%;
+  max-width: 300px;
+}
+
+.item {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+
+  border: 1px solid var(--border);
+  border-radius: 12px;
+  color: var(--dimmed);
+  font-size: 14px;
+  font-weight: 600;
+  padding: 12px 16px;
+  text-decoration: none;
+
+  transition: background-color var(--transition) ease;
+
+  &:hover {
+    background-color: var(--gray-8);
+  }
+
+  .name {
+    flex: 1;
+
+    color: var(--gray-0);
+    font-size: 14px;
     font-weight: 600;
-    margin-bottom: 24px;
   }
 
-  p {
-    color: var(--dimmed);
-    font-size: 12px;
+  .dimmed {
+    color: var(--gray-2);
+  }
+
+  .recent,
+  .installed {
+    font-size: 11px;
     font-weight: 600;
-    margin-bottom: 24px;
-    text-align: center;
   }
 
-  .list {
-    display: grid;
-    gap: 10px;
-    width: 100%;
-    overflow-y: scroll;
+  .recent {
+    display: flex;
+    align-items: center;
 
-    .item {
-      display: flex;
-      align-items: center;
-      gap: 8px;
-
-      border: 1px solid var(--border);
-      border-radius: 12px;
-      color: var(--gray-2);
-      font-size: 14px;
-      font-weight: 600;
-      padding: 12px 16px;
-      text-decoration: none;
-
-      transition: background-color var(--transition) ease;
-
-      &:hover {
-        background-color: var(--gray-8);
-      }
-
-      .name {
-        flex: 1;
-        font-size: 14px;
-        font-weight: 600;
-      }
-
-      .extra,
-      .recent {
-        font-size: 11px;
-        font-weight: 600;
-      }
-
-      .recent {
-        padding: 1px 9px;
-        border-radius: 4px;
-        color: var(--info);
-        background-color: var(--info-bg);
-      }
-    }
-
-    .installed {
-      .name {
-        color: var(--gray-0);
-      }
-    }
+    background-color: var(--info-bg);
+    border-radius: 4px;
+    color: var(--info);
+    height: 20px;
+    padding: 0 10px;
   }
+}
 
-  .footer {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    margin: 20px auto;
+.docs {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 6px;
 
-    a {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 6px;
-      font-size: 14px;
-      font-weight: 600;
-      text-decoration: none;
-      color: var(--gray-3);
+  color: var(--gray-3);
+  font-size: 14px;
+  font-weight: 600;
+  text-decoration: none;
 
-      &:hover {
-        color: var(--gray-0);
-      }
-    }
+  transition: color var(--transition) ease;
+
+  &:hover {
+    color: var(--gray-1);
   }
 }
