--- a/packages/interwovenkit-react/src/pages/bridge/op/ClaimButton.module.css
+++ b/packages/interwovenkit-react/src/pages/bridge/op/ClaimButton.module.css
@@ -1,15 +1,15 @@
 .button {
   border-radius: calc(infinity * 1px);
-  border: 1px solid var(--gray-6);
+  border: 1px solid var(--gray-3);
+  color: var(--gray-1);
   font-size: 12px;
   font-weight: 600;
-  height: 38px;
-  padding: 0 24px;
+  padding: 6px 24px;
 
   transition: border-color var(--transition) ease;
 
   &:hover {
-    border-color: var(--gray-0);
+    background-color: var(--gray-8);
   }
 }
 
